--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ obj/
 /packages/
 riderModule.iml
 /_ReSharper.Caches/
+/.idea/.idea.Q-Learning/.idea/.gitignore
+/.idea/.idea.Q-Learning/.idea/encodings.xml
+/.idea/.idea.Q-Learning/.idea/indexLayout.xml
+/.idea/.idea.Q-Learning/.idea/vcs.xml
