--- a/MazeWpfApp/MazeWpfApp.csproj
+++ b/MazeWpfApp/MazeWpfApp.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Q-Learning\Q-Learning.csproj" />
+  </ItemGroup>
+
 </Project>
